--- a/add.html
+++ b/add.html
@@ -10,9 +10,15 @@
     <button type="submit">Add</button>
 </form>
 <script>
+    const electron = require('electron');
+
+    const {ipcRenderer} = electron;
+
     document.querySelector('form').addEventListener('submit', (event) => {
         event.preventDefault();
-        debugger;
+        const {value} = document.querySelector('input').value;
+        ipcRenderer.send("todo:add", value);
+
     })
 </script>
 </body>
